<resources>
    <string name="app_name">Socialite</string>
    <string name="test_login">Test Login</string>
    <string name="test_sharing">Test Sharing</string>
    <string name="test_facebook_comments">Test Facebook Comments</string>
    <string name="share_on_fb_feed">Share on Facebook Feed</string>
    <string name="share_fb_message">Share via Facebook Message</string>
    <string name="share_whatsapp">Share via Whatsapp</string>
    <string name="share_email">Share via Email</string>
    <string name="share_twitter">Share via Twitter</string>
    <string name="login_fb">Login via Facebook</string>
    <string name="login_twitter">Login via Twitter</string>

    <string name="facebook_app_id">258516957620026</string>
    <string name="twitter_consumer_key">UhRMshC7nKlaXmd8mNLa7YQtk</string>
    <string name="twitter_consumer_secret">vuxxoysoPwmq5jQ4PuSnj4THN1XhmlePaPektiBeUqRJmImfTK</string>
</resources>
